arc: Fix crash on window close (on close race condition).

This handles race condition on window closing.

TEST=Extended browser_tests
TEST=Manually on device
TEST=test_that -b veyron_minnie <IP> cheets_Notification
BUG=638656
BUG=638261

Review-Url: https://codereview.chromium.org/2256273003
Cr-Commit-Position: refs/heads/master@{#412940}

Former-commit-id: 800987eb69027f6f34dff840b19c68a83065c6ae